[package]
name = "test-nwg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# native-windows-gui = { path = "../native-windows-gui/native-windows-gui" }
native-windows-gui = "1.0.12"
# native-windows-derive = "1.0.3" # Optional. Only if the derive macro is used.

# https://serde.rs/derive.html
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"

image = "0.24.2"